# CMake

Source/: cmGetCMakePropertyCommand.cxx  cmGlobalGenerator.cxx  cmGlobalGenerator.h  cmState.cxx
Tests/AliasTarget/: CMakeLists.txt
